--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -1,33 +1,13 @@
-<%= form_for(@car) do |f| %>
-  <% if @car.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@car.errors.count, "error") %> prohibited this car from being saved:</h2>
+<%= semantic_form_for(@car) do |f| %>
 
-      <ul>
-      <% @car.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+  <%= f.inputs do %>
+    <%= f.input :producent %>
+    <%= f.input :brand %>
+    <%= f.input :color %>
+    <%= f.input :max_speed %>
   <% end %>
 
-  <div class="field">
-    <%= f.label :producent %><br />
-    <%= f.text_field :producent %>
-  </div>
-  <div class="field">
-    <%= f.label :brand %><br />
-    <%= f.text_field :brand %>
-  </div>
-  <div class="field">
-    <%= f.label :collor %><br />
-    <%= f.text_field :collor %>
-  </div>
-  <div class="field">
-    <%= f.label :max_speed %><br />
-    <%= f.text_field :max_speed %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.buttons %>
+
 <% end %>
+
