--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= stylesheet_link_tag "application" %>
     <%= formtastic_stylesheet_link_tag %>
     <%= javascript_include_tag :defaults %>
+    <%= calendar_date_select_includes %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
